# home_sensing

./: .gitignore
backend/: pyproject.toml
backend/backend/: DatabaseClient.py  IqrFilter.py  create_tables.py  database_client.py  drop_tables.py  init_db.py  main.py  subscriber.py
backend/backend/database/: init_db.py
broker/: docker-compose.yml
broker/conf/: mosquitto.conf
go-backend/src/: Makefile  go.mod  main.go
go-backend/src/dataProcessor/: dataProcessor.go
go-backend/src/mqttClient/: go.mod  mqttClient.go
publish/: CMakeLists.txt  Makefile  README.md  build-project.sh  schematic.odg  sdkconfig  sdkconfig.old  upload-project.sh
publish/main/: CMakeLists.txt  Kconfig.projbuild  main.c  mqtt.c  mqtt.h  publish.c  sleep.c  sleep.h  wifi.c  wifi.h
